[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/astron_boy_wonder.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interface/level_complete/level_complete.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[node name="LevelComplete" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "Level Complete!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 1024.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.533333, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Next Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 378.0
margin_right = 1024.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.533333, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
